[gd_scene load_steps=2 format=3 uid="uid://cnesting123456"]

[ext_resource type="Script" path="res://scenes/player/ui/spell_nesting_tree_view.gd" id="1_nesting"]

[node name="SpellNestingTreeView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nesting")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "法术嵌套结构视图"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExpandAllButton" type="Button" parent="VBox/TitleBar"]
layout_mode = 2
text = "全部展开"

[node name="CollapseAllButton" type="Button" parent="VBox/TitleBar"]
layout_mode = 2
text = "全部折叠"

[node name="ExpandDepthButton" type="Button" parent="VBox/TitleBar"]
layout_mode = 2
text = "展开2层"

[node name="Tree" type="Tree" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
hide_root = true
select_mode = 1

[node name="InfoPanel" type="PanelContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 0

[node name="InfoVBox" type="VBoxContainer" parent="VBox/InfoPanel"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBox/InfoPanel/InfoVBox"]
layout_mode = 2
text = "未加载法术"
autowrap_mode = 2

[node name="StatsHBox" type="HBoxContainer" parent="VBox/InfoPanel/InfoVBox"]
layout_mode = 2

[node name="DepthIndicator" type="Label" parent="VBox/InfoPanel/InfoVBox/StatsHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "嵌套深度: 0"

[node name="ComplexityLabel" type="Label" parent="VBox/InfoPanel/InfoVBox/StatsHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "总节点数: 0"

[connection signal="pressed" from="VBox/TitleBar/ExpandAllButton" to="." method="expand_all"]
[connection signal="pressed" from="VBox/TitleBar/CollapseAllButton" to="." method="collapse_all"]
[connection signal="pressed" from="VBox/TitleBar/ExpandDepthButton" to="." method="expand_to_depth" binds= [2]]
