extends Control
class_name SpellNestingTreeView
## æ³•æœ¯åµŒå¥—ç»“æ„æ ‘å½¢è§†å›¾
## ä»¥æ ‘çŠ¶ç»“æ„å±•ç¤ºæ³•æœ¯çš„å¤šå±‚åµŒå¥—å…³ç³»

signal node_selected(spell_data: SpellCoreData, depth: int)
signal child_spell_edit_requested(fission_action: FissionActionData)

@export var show_detailed_info: bool = true
@export var color_by_depth: bool = true
@export var max_display_depth: int = 10

@onready var tree: Tree = $VBox/Tree
@onready var info_label: Label = $VBox/InfoPanel/InfoLabel
@onready var depth_indicator: Label = $VBox/InfoPanel/DepthIndicator
@onready var complexity_label: Label = $VBox/InfoPanel/ComplexityLabel

var current_spell: SpellCoreData = null
var depth_colors: Array[Color] = [
	Color(0.9, 0.9, 1.0),    # ç¬¬0å±‚ï¼šæµ…è“ç™½
	Color(0.8, 1.0, 0.8),    # ç¬¬1å±‚ï¼šæµ…ç»¿
	Color(1.0, 1.0, 0.7),    # ç¬¬2å±‚ï¼šæµ…é»„
	Color(1.0, 0.9, 0.7),    # ç¬¬3å±‚ï¼šæµ…æ©™
	Color(1.0, 0.8, 0.8),    # ç¬¬4å±‚ï¼šæµ…çº¢
	Color(0.9, 0.8, 1.0),    # ç¬¬5å±‚ï¼šæµ…ç´«
]

func _ready() -> void:
	_setup_tree()
	_connect_signals()

func _setup_tree() -> void:
	tree.columns = 3
	tree.set_column_title(0, "æ³•æœ¯ç»“æ„")
	tree.set_column_title(1, "ç±»å‹")
	tree.set_column_title(2, "è¯¦æƒ…")
	tree.set_column_titles_visible(true)
	tree.hide_root = true
	tree.allow_reselect = true
	tree.set_column_expand(0, true)
	tree.set_column_expand(1, false)
	tree.set_column_expand(2, true)
	tree.set_column_custom_minimum_width(1, 80)
	tree.set_column_custom_minimum_width(2, 200)

func _connect_signals() -> void:
	tree.item_selected.connect(_on_tree_item_selected)
	tree.item_activated.connect(_on_tree_item_activated)

## åŠ è½½å¹¶æ˜¾ç¤ºæ³•æœ¯çš„åµŒå¥—ç»“æ„
func load_spell(spell: SpellCoreData) -> void:
	current_spell = spell
	_refresh_tree()

## åˆ·æ–°æ•´ä¸ªæ ‘è§†å›¾
func _refresh_tree() -> void:
	tree.clear()
	var root = tree.create_item()
	
	if current_spell == null:
		info_label.text = "æœªåŠ è½½æ³•æœ¯"
		depth_indicator.text = "åµŒå¥—æ·±åº¦: 0"
		complexity_label.text = "å¤æ‚åº¦: 0"
		return
	
	# åˆ›å»ºæ ¹æ³•æœ¯èŠ‚ç‚¹
	_create_spell_node(root, current_spell, 0, "æ ¹æ³•æœ¯")
	
	# æ›´æ–°ç»Ÿè®¡ä¿¡æ¯
	var max_depth = _calculate_max_depth(current_spell, 0)
	var total_nodes = _count_total_nodes(current_spell)
	depth_indicator.text = "åµŒå¥—æ·±åº¦: %d" % max_depth
	complexity_label.text = "æ€»èŠ‚ç‚¹æ•°: %d" % total_nodes
	info_label.text = "æ³•æœ¯: %s" % current_spell.spell_name

## åˆ›å»ºæ³•æœ¯èŠ‚ç‚¹åŠå…¶æ‰€æœ‰å­èŠ‚ç‚¹
func _create_spell_node(parent: TreeItem, spell: SpellCoreData, depth: int, label: String) -> TreeItem:
	var spell_item = tree.create_item(parent)
	
	# è®¾ç½®æ³•æœ¯åŸºæœ¬ä¿¡æ¯
	var depth_prefix = "  ".repeat(depth) if depth > 0 else ""
	spell_item.set_text(0, "%sğŸ“œ %s" % [depth_prefix, label])
	spell_item.set_text(1, "æ³•æœ¯")
	spell_item.set_text(2, "Cost: %.0f | CD: %.1fs" % [spell.resource_cost, spell.cooldown])
	
	# æ ¹æ®æ·±åº¦è®¾ç½®é¢œè‰²
	if color_by_depth and depth < depth_colors.size():
		var color = depth_colors[depth]
		spell_item.set_custom_bg_color(0, color)
		spell_item.set_custom_bg_color(1, color)
		spell_item.set_custom_bg_color(2, color)
	
	# å­˜å‚¨å…ƒæ•°æ®
	spell_item.set_metadata(0, {
		"type": "spell",
		"spell_data": spell,
		"depth": depth
	})
	
	# æ·»åŠ è½½ä½“ä¿¡æ¯
	if spell.carrier != null:
		_create_carrier_node(spell_item, spell.carrier, depth)
	
	# æ·»åŠ æ‹“æ‰‘è§„åˆ™
	for i in range(spell.topology_rules.size()):
		var rule = spell.topology_rules[i]
		_create_rule_node(spell_item, rule, i, depth, spell)
	
	return spell_item

## åˆ›å»ºè½½ä½“é…ç½®èŠ‚ç‚¹
func _create_carrier_node(parent: TreeItem, carrier: CarrierConfigData, depth: int) -> TreeItem:
	var carrier_item = tree.create_item(parent)
	
	var phase_name = ["å›ºæ€", "æ¶²æ€", "ç­‰ç¦»å­æ€"][carrier.phase]
	carrier_item.set_text(0, "  ğŸš€ è½½ä½“é…ç½®")
	carrier_item.set_text(1, phase_name)
	carrier_item.set_text(2, "é€Ÿåº¦: %.0f | å¯¿å‘½: %.1fs | è´¨é‡: %.1f" % [carrier.velocity, carrier.lifetime, carrier.mass])
	
	carrier_item.set_metadata(0, {
		"type": "carrier",
		"carrier_data": carrier,
		"depth": depth
	})
	
	return carrier_item

## åˆ›å»ºè§„åˆ™èŠ‚ç‚¹
func _create_rule_node(parent: TreeItem, rule: TopologyRuleData, index: int, depth: int, spell: SpellCoreData) -> TreeItem:
	var rule_item = tree.create_item(parent)
	
	var trigger_name = rule.trigger.get_type_name() if rule.trigger else "æ— è§¦å‘å™¨"
	rule_item.set_text(0, "  âš¡ è§„åˆ™ %d: %s" % [index + 1, rule.rule_name])
	rule_item.set_text(1, trigger_name)
	rule_item.set_text(2, "%dä¸ªåŠ¨ä½œ" % rule.actions.size())
	
	rule_item.set_metadata(0, {
		"type": "rule",
		"rule_data": rule,
		"depth": depth
	})
	
	# æ·»åŠ åŠ¨ä½œèŠ‚ç‚¹
	for j in range(rule.actions.size()):
		var action = rule.actions[j]
		_create_action_node(rule_item, action, j, depth, spell)
	
	return rule_item

## åˆ›å»ºåŠ¨ä½œèŠ‚ç‚¹(å…³é”®ï¼šå¤„ç†åµŒå¥—)
func _create_action_node(parent: TreeItem, action: ActionData, index: int, depth: int, parent_spell: SpellCoreData) -> TreeItem:
	var action_item = tree.create_item(parent)
	
	var action_icon = _get_action_icon(action)
	var action_desc = _get_action_description(action)
	
	action_item.set_text(0, "    %s åŠ¨ä½œ %d" % [action_icon, index + 1])
	action_item.set_text(1, action.get_type_name())
	action_item.set_text(2, action_desc)
	
	action_item.set_metadata(0, {
		"type": "action",
		"action_data": action,
		"depth": depth
	})
	
	# å…³é”®ï¼šå¦‚æœæ˜¯è£‚å˜åŠ¨ä½œä¸”æœ‰å­æ³•æœ¯ï¼Œé€’å½’åˆ›å»ºå­æ³•æœ¯æ ‘
	if action is FissionActionData:
		var fission = action as FissionActionData
		if fission.child_spell_data != null and fission.child_spell_data is SpellCoreData:
			var child_spell = fission.child_spell_data as SpellCoreData
			
			# æ£€æŸ¥æ·±åº¦é™åˆ¶
			if depth + 1 < max_display_depth:
				_create_spell_node(action_item, child_spell, depth + 1, "å­æ³•æœ¯: %s" % child_spell.spell_name)
			else:
				var warning_item = tree.create_item(action_item)
				warning_item.set_text(0, "      âš ï¸ å·²è¾¾æœ€å¤§æ˜¾ç¤ºæ·±åº¦")
				warning_item.set_custom_color(0, Color.ORANGE)
	
	# å¦‚æœæ˜¯å¬å”¤åŠ¨ä½œï¼Œæ˜¾ç¤ºå¬å”¤ç‰©ä¿¡æ¯
	elif action is SummonActionData:
		var summon = action as SummonActionData
		if summon.custom_spell_data != null and summon.custom_spell_data is SpellCoreData:
			var summon_spell = summon.custom_spell_data as SpellCoreData
			if depth + 1 < max_display_depth:
				_create_spell_node(action_item, summon_spell, depth + 1, "å¬å”¤ç‰©æ³•æœ¯: %s" % summon_spell.spell_name)
	
	return action_item

## è·å–åŠ¨ä½œå›¾æ ‡
func _get_action_icon(action: ActionData) -> String:
	if action is DamageActionData:
		return "âš”ï¸"
	elif action is FissionActionData:
		return "ğŸ’¥"
	elif action is AreaEffectActionData:
		return "ğŸŒŠ"
	elif action is ApplyStatusActionData:
		return "ğŸ§ª"
	elif action is SummonActionData:
		return "ğŸ‘»"
	elif action is ChainActionData:
		return "â›“ï¸"
	elif action is ShieldActionData:
		return "ğŸ›¡ï¸"
	elif action is ReflectActionData:
		return "ğŸª"
	elif action is DisplacementActionData:
		return "ğŸŒ€"
	elif action is SpawnExplosionActionData:
		return "ğŸ’£"
	elif action is SpawnDamageZoneActionData:
		return "ğŸ”¥"
	return "âœ¨"

## è·å–åŠ¨ä½œè¯¦ç»†æè¿°
func _get_action_description(action: ActionData) -> String:
	if action is DamageActionData:
		var dmg = action as DamageActionData
		return "ä¼¤å®³: %.1f Ã— %.2f" % [dmg.damage_value, dmg.damage_multiplier]
	
	elif action is FissionActionData:
		var fission = action as FissionActionData
		var child_name = "æ— "
		if fission.child_spell_data != null and fission.child_spell_data is SpellCoreData:
			child_name = fission.child_spell_data.spell_name
		return "åˆ†è£‚: %dä¸ª | è§’åº¦: %.0fÂ° | å­æ³•æœ¯: %s" % [fission.spawn_count, fission.spread_angle, child_name]
	
	elif action is AreaEffectActionData:
		var area = action as AreaEffectActionData
		return "èŒƒå›´: åŠå¾„ %.0f | ä¼¤å®³: %.1f" % [area.radius, area.damage_value]
	
	elif action is ApplyStatusActionData:
		var status = action as ApplyStatusActionData
		var status_names = ["ç¼çƒ§", "å†»ç»“", "ä¸­æ¯’", "è™šå¼±", "å‡é€Ÿ", "çœ©æ™•"]
		var status_name = status_names[status.status_type] if status.status_type < status_names.size() else "æœªçŸ¥"
		return "çŠ¶æ€: %s | æŒç»­: %.1fs | å±‚æ•°: %d" % [status_name, status.duration, status.stacks]
	
	elif action is SummonActionData:
		var summon = action as SummonActionData
		var summon_types = ["ç‚®å¡”", "ä»†ä»", "ç¯ç»•ä½“", "è¯±é¥µ", "å±éšœ", "å›¾è…¾"]
		var summon_type_name = summon_types[summon.summon_type] if summon.summon_type < summon_types.size() else "æœªçŸ¥"
		return "å¬å”¤: %s Ã— %d | æŒç»­: %.1fs | ä¼¤å®³: %.1f" % [summon_type_name, summon.summon_count, summon.summon_duration, summon.summon_damage]
	
	elif action is ChainActionData:
		var chain = action as ChainActionData
		return "é“¾å¼: %dè·³ | èŒƒå›´: %.0f | ä¼¤å®³è¡°å‡: %.0f%%" % [chain.max_jumps, chain.jump_range, chain.damage_falloff * 100]
	
	elif action is ShieldActionData:
		var shield = action as ShieldActionData
		return "æŠ¤ç›¾: å¸æ”¶ %.0f | æŒç»­: %.1fs" % [shield.shield_amount, shield.shield_duration]
	
	elif action is ReflectActionData:
		var reflect = action as ReflectActionData
		return "åå°„: æŒç»­ %.1fs | å€ç‡: %.1fx" % [reflect.reflect_duration, reflect.reflect_multiplier]
	
	elif action is DisplacementActionData:
		var disp = action as DisplacementActionData
		return "ä½ç§»: è·ç¦» %.0f | é€Ÿåº¦: %.0f" % [disp.displacement_distance, disp.displacement_speed]
	
	elif action is SpawnExplosionActionData:
		var exp = action as SpawnExplosionActionData
		return "çˆ†ç‚¸: ä¼¤å®³ %.1f | åŠå¾„: %.0f" % [exp.explosion_damage, exp.explosion_radius]
	
	elif action is SpawnDamageZoneActionData:
		var zone = action as SpawnDamageZoneActionData
		return "ä¼¤å®³åŒº: ä¼¤å®³ %.1f/s | æŒç»­: %.1fs" % [zone.zone_damage, zone.zone_duration]
	
	return action.get_type_name()

## è®¡ç®—æœ€å¤§åµŒå¥—æ·±åº¦
func _calculate_max_depth(spell: SpellCoreData, current_depth: int) -> int:
	var max_depth = current_depth
	
	for rule in spell.topology_rules:
		for action in rule.actions:
			if action is FissionActionData:
				var fission = action as FissionActionData
				if fission.child_spell_data != null and fission.child_spell_data is SpellCoreData:
					var child_depth = _calculate_max_depth(fission.child_spell_data, current_depth + 1)
					max_depth = maxi(max_depth, child_depth)
			
			elif action is SummonActionData:
				var summon = action as SummonActionData
				if summon.custom_spell_data != null and summon.custom_spell_data is SpellCoreData:
					var child_depth = _calculate_max_depth(summon.custom_spell_data, current_depth + 1)
					max_depth = maxi(max_depth, child_depth)
	
	return max_depth

## è®¡ç®—æ€»èŠ‚ç‚¹æ•°
func _count_total_nodes(spell: SpellCoreData) -> int:
	var count = 1  # æ³•æœ¯æœ¬èº«
	
	if spell.carrier != null:
		count += 1
	
	for rule in spell.topology_rules:
		count += 1  # è§„åˆ™
		count += rule.actions.size()  # åŠ¨ä½œ
		
		for action in rule.actions:
			if action is FissionActionData:
				var fission = action as FissionActionData
				if fission.child_spell_data != null and fission.child_spell_data is SpellCoreData:
					count += _count_total_nodes(fission.child_spell_data)
			
			elif action is SummonActionData:
				var summon = action as SummonActionData
				if summon.custom_spell_data != null and summon.custom_spell_data is SpellCoreData:
					count += _count_total_nodes(summon.custom_spell_data)
	
	return count

## æ ‘èŠ‚ç‚¹é€‰ä¸­äº‹ä»¶
func _on_tree_item_selected() -> void:
	var selected = tree.get_selected()
	if selected == null:
		return
	
	var metadata = selected.get_metadata(0)
	if metadata == null:
		return
	
	var type = metadata.get("type", "")
	var depth = metadata.get("depth", 0)
	
	# æ›´æ–°ä¿¡æ¯é¢æ¿
	match type:
		"spell":
			var spell = metadata.get("spell_data")
			info_label.text = "æ³•æœ¯: %s | æ·±åº¦: %d" % [spell.spell_name, depth]
			node_selected.emit(spell, depth)
		
		"carrier":
			var carrier = metadata.get("carrier_data")
			var phase_name = ["å›ºæ€", "æ¶²æ€", "ç­‰ç¦»å­æ€"][carrier.phase]
			info_label.text = "è½½ä½“: %sç›¸æ€ | é€Ÿåº¦: %.0f | å¯¿å‘½: %.1fs" % [phase_name, carrier.velocity, carrier.lifetime]
		
		"rule":
			var rule = metadata.get("rule_data")
			info_label.text = "è§„åˆ™: %s | %dä¸ªåŠ¨ä½œ" % [rule.rule_name, rule.actions.size()]
		
		"action":
			var action = metadata.get("action_data")
			info_label.text = "åŠ¨ä½œ: %s | %s" % [action.get_type_name(), _get_action_description(action)]

## æ ‘èŠ‚ç‚¹åŒå‡»äº‹ä»¶
func _on_tree_item_activated() -> void:
	var selected = tree.get_selected()
	if selected == null:
		return
	
	var metadata = selected.get_metadata(0)
	if metadata == null:
		return
	
	var type = metadata.get("type", "")
	
	# å¦‚æœæ˜¯è£‚å˜åŠ¨ä½œï¼Œå‘å‡ºç¼–è¾‘è¯·æ±‚ä¿¡å·
	if type == "action":
		var action = metadata.get("action_data")
		if action is FissionActionData:
			child_spell_edit_requested.emit(action)

## å±•å¼€æ‰€æœ‰èŠ‚ç‚¹
func expand_all() -> void:
	_expand_recursive(tree.get_root())

func _expand_recursive(item: TreeItem) -> void:
	if item == null:
		return
	
	item.collapsed = false
	var child = item.get_first_child()
	while child != null:
		_expand_recursive(child)
		child = child.get_next()

## æŠ˜å æ‰€æœ‰èŠ‚ç‚¹
func collapse_all() -> void:
	_collapse_recursive(tree.get_root())

func _collapse_recursive(item: TreeItem) -> void:
	if item == null:
		return
	
	item.collapsed = true
	var child = item.get_first_child()
	while child != null:
		_collapse_recursive(child)
		child = child.get_next()

## å±•å¼€åˆ°æŒ‡å®šæ·±åº¦
func expand_to_depth(target_depth: int) -> void:
	_expand_to_depth_recursive(tree.get_root(), 0, target_depth)

func _expand_to_depth_recursive(item: TreeItem, current_depth: int, target_depth: int) -> void:
	if item == null:
		return
	
	if current_depth < target_depth:
		item.collapsed = false
	else:
		item.collapsed = true
	
	var child = item.get_first_child()
	while child != null:
		_expand_to_depth_recursive(child, current_depth + 1, target_depth)
		child = child.get_next()

## æ¸…ç©ºæ ‘
func clear() -> void:
	tree.clear()
	current_spell = null
	info_label.text = "æœªåŠ è½½æ³•æœ¯"
	depth_indicator.text = "åµŒå¥—æ·±åº¦: 0"
	complexity_label.text = "å¤æ‚åº¦: 0"
